[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/bomb_explosion.gd" type="Script" id=1]
[ext_resource path="res://Objects/Explosion.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=2]

[node name="BombExplosion" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
